Fix z-index issue with tags.

--- a/src/components/EvTag/EvTag.scss
+++ b/src/components/EvTag/EvTag.scss
@@ -37,6 +37,7 @@
     cursor: pointer;
     transition: 0.25s color var(--easing-standard);
     flex: 0 0 auto;
+    z-index: 0;
 
     &:before {
         content: '';
